Revision history for Getopt-Euclid

0.3.5
  - Removed extraneous \E (patch by Todd Rinaldo)
  - Better handling of quoted arguments (RT bug #49525, reported by Ken Galinsky)

0.3.4
  - New standard argument --podfile to write the manual in a .pod file
  - Fixed issue where the NAME and VERSION sections appeared as a verbatim
    section (which podchecker complains about)
  - Always convert POD to text when calling help() and man()
  - help() is now paged if IO::Pager::Page is installed
  - Dependency changes:
      Pod::Simple::Text replaces Pod::Text
      Pod::Simple::Text is required instead of recommended,
      IO::Pager::Page is recommended

0.3.3
  - Attempt to extract POD even from files that look binary (might be packaged
    with pp, perlapp or similar program)

0.3.2
  - Another attempt to make the CPAN indexer happy

0.3.1
  - Changed $VERSION to make the CPAN indexer happy
  - Export repeatable options with multiple placeholders as an empty arrayref,
    not as an empty hashref (RT bug #71165, reported by Bill Levering)

0.3.0
  - Reverted feature to match POD head section =head2, =head3 and =head4 because
    of backward compatibility issue (RT bug #70942)

0.2.9  2011-09-03
  - This command does not generate warnings anymore:
    perl -e 'use Getopt::Euclid; print $Getopt::Euclid::VERSION;'
  - Required and optional arguments can now be put in a POD head section =head2,
    =head3 and =head4 for more flexibility

0.2.8  2011-09-02
  - Support for optional defaults (RT bug #61438, patch from Paolo Medeo)
  - Extended the grammar of recognized POD headers for required and optional arguments:
    [STANDARD|STD|PROGRAM|SCRIPT|CLI|COMMAND[-| ]LINE] [REQUIRED|MANDATORY] [PARAM|PARAMETER|ARG|ARGUMENT][S]
    [STANDARD|STD|PROGRAM|SCRIPT|CLI|COMMAND[-| ]LINE]      OPTION[AL|S]    [PARAM|PARAMETER|ARG|ARGUMENT][S]
  - Usage error message now mentions the --man option in addition to --help

0.2.7
  - Updated dependencies in Build.PL module

0.2.6