@@ -1,5 +1,8 @@
 Revision history for Getopt-Euclid
 
+0.xx
+  - Fixed occasional non-minimized entry when using :minimal_keys specifier
+
 0.3.5
   - Removed extraneous \E (patch by Todd Rinaldo)
   - Better handling of quoted arguments (RT bug #49525, reported by Ken Galinsky)
